@startuml

package "Notification Module" {

    enum NotificationType {
        BUDGET_ALERT
        GOAL_REMINDER
        GOAL_COMPLETE
    }

    class Notification {
        - int notificationID
        - int userID
        - NotificationType type
        - String message
        - boolean isRead
        - localDateTime timestamp
    }

    class NotificationController {
        - NotificationService service

        + getNotifications(userID : int)
        + markAsRead(notificationID : int)
        + updateNotificationSettings(userID : int, settings)
    }

    class NotificationService {
        - NotificationRepository repo

        + generateNotification(event : NotificationEvent)
        + getUserNotifications(userID : int)
    }

    class NotificationRepository {
        + saveNotification(Notification notification)
        + getNotificationsByUserId(int userID)
        + updateNotificationStatus(int notificationID, boolean isRead)
    }

    class NotificationSettings {
        - int userID
        - boolean budgetAlertsEnabled
        - boolean goalRemindersEnabled
    }


    ' EVENTS (INPUT TO SERVICE)
    abstract class NotificationEvent {
        - int userID
        - localDateTime timestamp
    }

    class BudgetExceededEvent {
        - String category
        - double budget
        - double spent
        - double exceededAmount
    }

    class GoalReminderEvent {
        - int goalID
        - localDateTime deadline
    }

    '  Relations

    Notification --> NotificationType

    NotificationController --> NotificationService
    NotificationController --> NotificationSettings

    NotificationService --> NotificationRepository
    NotificationService --> Notification
    NotificationService --> NotificationEvent

    BudgetExceededEvent --|> NotificationEvent : implement
    GoalReminderEvent --|> NotificationEvent : implement

    NotificationRepository --> Notification
}

' CROSS-MODULE RELATIONS


TransactionService --> BudgetExceededEvent : Creates
TransactionService --> NotificationService : Sends event

GoalService --> GoalReminderEvent : Creates
GoalService --> NotificationService : Sends event

@enduml